<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100F10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="355dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output" />
<TextView
        android:id="@+id/output"
        android:layout_width="355dp"
        android:layout_height="68dp"
        android:ems="10"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonAC"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_lightgrey"
        android:text="@string/ac"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/div"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_lightgrey"
        android:text="@string/div"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/mul"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_lightgrey"
        android:text="@string/multiply"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@id/modulus"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_lightgrey"
        android:text="@string/modulus"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/mul"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/seven"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC" />

    <Button
        android:id="@+id/four"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/one"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/eight"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/five"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/nine"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/mul" />

    <Button
        android:id="@+id/six"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/three"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_orange"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/modulus" />

    <Button
        android:id="@+id/sub"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_orange"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/sub"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/dot"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_darkgrey"
        android:text="@string/dot"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/zero"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_zero"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/equal"
        android:layout_width="60dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_equal"
        android:text="@string/equal"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

</androidx.constraintlayout.widget.ConstraintLayout>